Moved Javascript to Js folder + Fixed scrollbar hover

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #b30000;
+    background: var(--rasin-black);
 }
 /* Custom Scrollbar CSS End */
 
